kustomize/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: website
  name: website-landing-landing
  labels:
    app: "website-landing"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website-landing
  template:
    metadata:
      labels:
        app: website-landing
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: website-landing
          image: image_repo
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 256m
              memory: 256Mi
            requests:
              cpu: 128m
              memory: 128Mi
