kustomize/base/rbac.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: website
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-website-landing
  namespace: website
spec:
  podSelector:
    matchLabels:
      app: website-landing
  ingress:
    - from:
      - namespaceSelector: {}
